[package]
name = "resend-invoice-from-xlsx"
version = "0.1.0"
edition = "2021"

[dependencies]
calamine = "0.25.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.7", features = ["json"] }
tiberius = "0.12.3"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat"]}
